--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "geojson": "^0.5.0",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
@@ -50,16 +51,17 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/http-errors": "^2.0.5",
+    "@types/ioredis": "^4.28.10",
     "@types/json-schema": "^7.0.15",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/multer-s3": "^3.0.3",
     "@types/node": "^24.0.3",
+    "@types/nodemailer": "^6.4.17",
     "@types/qs": "^6.14.0",
     "@types/range-parser": "^1.2.7",
     "@types/send": "^0.17.5",
     "@types/serve-static": "^1.15.8",
-    "@types/nodemailer": "^6.4.17",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "cross-env": "^7.0.3",
