--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     command: redis-server --appendonly yes # Redis 서버 시작 시 AOF(Append Only File) 영속성 활성화
     volumes:
       - redis_data:/data # Redis 데이터를 영구적으로 저장할 볼륨 마운트
+    restart: always #컨테이너 자동 재시작
 
 volumes:
   redis_data: # Redis 데이터 볼륨 정의
